[gd_scene load_steps=4 format=3 uid="uid://6et1tlqxfrdx"]

[ext_resource type="Script" uid="uid://bpdye6y5c5yaw" path="res://script/networking_config.gd" id="1_networking"]
[ext_resource type="Script" uid="uid://dxfujov7vai6f" path="res://addons/onscreenkeyboard/onscreen_keyboard.gd" id="2_keyboard"]
[ext_resource type="Theme" uid="uid://cdynjfvdtavlt" path="res://scene/main_menu/main_menu_button_theme.tres" id="3_mxxne"]

[node name="NetworkingConfig" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_networking")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.03137255, 0.03137255, 0.03137255, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 123.0
grow_horizontal = 2
theme = ExtResource("3_mxxne")
theme_override_font_sizes/font_size = 48
text = "TARGETLINK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -360.0
offset_top = 170.0
offset_right = 360.0
offset_bottom = 204.0
grow_horizontal = 2
theme = ExtResource("3_mxxne")
horizontal_alignment = 1
vertical_alignment = 1

[node name="InstructionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -89.0
offset_bottom = -46.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_mxxne")
text = "only_one_master_config"
horizontal_alignment = 1

[node name="CenterContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 400
theme_override_constants/margin_right = 150

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="WorkMode" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mxxne")

[node name="WorkModeDropdown" type="OptionButton" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(24, 32)
layout_mode = 2
theme = ExtResource("3_mxxne")

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="NameLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mxxne")

[node name="NameLineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_mxxne")
keep_editing_on_text_submit = true

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="QRCodeTexture" type="TextureRect" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(360, 360)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="BottomContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -500.0
offset_bottom = -240.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 200

[node name="OnscreenKeyboard" type="PanelContainer" parent="BottomContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_keyboard")
metadata/_custom_type_script = "uid://dxfujov7vai6f"
